<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="zbloom.cin.CIN">

    <include
            android:id="@+id/app_bar"
            layout="@layout/app_bar" />

        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/view"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/app_bar"
            card_view:cardCornerRadius="5dp"
            card_view:cardElevation="2dp">

            <TextView
                android:id="@+id/userName"
                style="@style/Base.TextAppearance.AppCompat.Headline"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/name" />

            <TextView
                android:id="@+id/userEmail"
                style="@style/Base.TextAppearance.AppCompat.Headline"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:autoText="false"
                android:paddingTop="32dp"
                android:text="@string/email" />
        </android.support.v7.widget.CardView>


        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"

            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/view"
            android:layout_marginTop="316dp"
            android:background="#1E88E5"
            card_view:cardCornerRadius="5dp">

            <TextView
                android:id="@+id/userHours"
                style="@style/Base.TextAppearance.AppCompat.Body1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:background="#1E88E5"
                android:gravity="center_horizontal"
                android:text="@string/hours"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </android.support.v7.widget.CardView>

        <com.gc.materialdesign.views.ButtonRectangle
            android:id="@+id/show_cients_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:background="#1E88E5"
            android:onClick="onClickShowClients"
            android:text="@string/my_clients" />

    </RelativeLayout>

    <fragment
        android:id="@+id/fragment_navigation_drawer"
        android:layout_width="@dimen/nav_drawer_width"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:layout="@layout/fragment_navigation_drawer"
        android:name="zbloom.cin.NavigationDrawerFragment"
        tools:layout="@layout/fragment_navigation_drawer" />

</android.support.v4.widget.DrawerLayout>